2007-05-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactLDIFEntry.[hm]: new class module
	replacing the SOGoContactLDAPEntry module. It was renamed as such
	because it now receives a dictionary instead of an NGLdapEntry.
	It thus can now handle data from any source of LDIF data, not
	only coming from LDAP.

	* SoObjects/SOGo/LDAPUserManager.[hm]: new class module
	implementing most of what used to be the AgenorUserManager class.
	The difference is that users are cached in the forme of
	dictionaries and many sources are used. Also, it can be used to
	search LDAP contacts.

	* SoObjects/SOGo/LDAPSource.[hm]: new class module implementing
	the concept of "ldap source", to be used by all the classes
	needing access to LDAP-provided information: addressbooks and the
	user manager. Most the method thereing are transcriptions of
	methods previously found in SOGoContactLDAPFolder. It also contain
	utility methods for user matching and authentification.

	* SoObjects/Appointments/iCalEntityObject+Agenor.[hm]: removed
	module, rendered useless by code refactoring.

	* SoObjects/SOGo/AgenorUserManager.[hm]: removed module, replaced
	with the freshly written "LDAPUserManager".

2007-05-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactLDAPEntry.[hm]: renamed to
	SOGOContactLDIFEntry.

	* SoObjects/Contacts/NGLdapEntry+Contact.[hm]: removed class
	module, obsoleted by code in SOGo/LDAPSource.[hm].

2007-05-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -currentUserIsOwner]):
	new method with an explicit name.

2007-05-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -isOrganizerOrOwner:user]): new method
	replacing "isOrganizer:orOwner:" by taking only one instance of
	SOGoUser as parameter.
	([SOGoCalendarComponent -participant:user]): new method replacing